# instrumental-contracts

./: .gitignore  .prettierrc  CODING_GUIDELINES.md  Cargo.toml  Makefile  Makefile.toml  README.md  build_release.sh  flake.nix  instrumental.puml  max.txt  result  rust-toolchain.toml  schema.Makefile.toml
.cargo/: config.toml
.devenv/: profile
.github/workflows/: artifacts.yml  cargo-llvm-cov.yml  ci.yml  coverage.yml  main.yml
bytecode/: liquidator.wasm
contracts/fee-distribution/: README.md
contracts/fee-distribution/collector/: Cargo.toml  README.md
contracts/fee-distribution/collector/src/: contract.rs  handle.rs  messages.rs  query.rs  state.rs
contracts/fee-distribution/collector/src/testing/: tests.rs
contracts/fee-distribution/distributor/: Cargo.toml  README.md
contracts/fee-distribution/distributor/src/: contract.rs  error.rs  handle.rs  helpers.rs  lib.rs  query.rs  state.rs
contracts/fee-distribution/distributor/src/testing/: tests.rs
contracts/fee-distribution/staking/: Cargo.toml  README.md
contracts/fee-distribution/staking/src/: contract.rs  distributor.rs  error.rs  handle.rs  helper.rs  lib.rs  messages.rs  query.rs  state.rs
contracts/fee-distribution/staking/src/testing/: execution_test.rs  instantiation_test.rs  integration_test.rs  mod.rs  query_test.rs
contracts/liquidator/: Cargo.toml  README.md
contracts/liquidator/scripts/: README.md  liquidator
contracts/liquidator/scripts/autocomplete/: _liquidator  liquidator_autocomplete.sh
contracts/liquidator/src/: contract.rs  error.rs  handle.rs  helpers.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/liquidator/src/testing/: tests.rs
contracts/liquidator/tests/: instantiate.rs  liquidate.rs  query.rs  set_route.rs
contracts/liquidator/tests/common/: mod.rs
contracts/staking/src/: contract.rs
contracts/vault/: Cargo.toml
contracts/vault/base/: Cargo.toml
contracts/vault/base/src/: contract.rs  lib.rs
contracts/vault/examples/: schema.rs
contracts/vault/osmosis/: Cargo.toml
contracts/vault/osmosis-vault/: Cargo.toml  README.md
contracts/vault/osmosis-vault/src/: contract.rs  lib.rs  msg.rs
contracts/vault/osmosis/src/: contract.rs  lib.rs  state.rs
contracts/vault/picasso-vault/: Cargo.toml  README.md
contracts/vault/src/: contract.rs  error.rs  lib.rs  state.rs  types.rs
contracts/vault/tests/: helpers.rs  test_instantiate.rs
doc/authz/: walkthrough.md
doc/vault/: autocompound.plantuml  withdraw.plantuml  yieldmos.txt
integration-tests/: Cargo.toml  README.md
integration-tests/tests/: helpers.rs  test_base_vault.rs  test_vault.rs
integration-tests/tests/helpers/: mod.rs
schemas/osmosis-vault/: osmosis-vault.json
schemas/vault/: vault.json
scripts/: .gitignore  README.md  deploy.ts  deploy_configs.ts  end-to-end.ts  fee.sh  helpers.ts  package.json  test_unstake.ts  types.d.ts
