[workspace]
members = [
  "contracts/liquidator",
  "contracts/fee-distribution/collector",
  "contracts/fee-distribution/distributor",
  "contracts/fee-distribution/staking",
  "packages/fee-distribution",
  "packages/instrumental-testing",
]
# this was never releasd or reviewed
exclude = [
  "packages/simple-vault",
  "packages/base-vault",
  "contracts/vault/*",
]

[workspace.package]
version = "1.0.0"
authors = [
  "George Ornbo <george@shapeshed.com>",
  "Friedrich Grabner <max.grabner@margined.io>",
]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/foo/bar"
homepage = "https://foo.bar"
documentation = "https://docs.foo.bar/"
keywords = ["cosmos", "cosmwasm"]

[workspace.dependencies]
anyhow = "1.0.68"
apollo-cw-asset = "0.1.0"
bech32 = "0.9.1"
cosmwasm-schema = "1.3.3"
cosmwasm-std = "1.2.5"
cosmwasm-storage = "1.2.2"
cw-controllers = "1.1.1"
cw-multi-test = "0.18.0"
cw-storage-plus = "1.0.1"
cw-utils = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
cw20-base = "1.0.1"
osmosis-std = "0.16.2"
osmosis-test-tube = "16.1.2"
prost = { version = "0.11.5", default-features = false, features = ["prost-derive",] }
schemars = "0.8.11"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.30"

# packages
pablo-vault-types = { version = "1.0.0", path = "./packages/types" }
base-vault = { version = "1.0.0", path = "./packages/base-vault" }
simple-vault = { version = "1.0.0", path = "./packages/simple-vault" }
fee-distribution = { version = "0.1.0", path = "./packages/fee-distribution" }
instrumental-testing = { version = "0.1.0", path = "./packages/instrumental-testing" }

# contracts
osmosis-vault = { version = "1.0.0", path = "./contracts/vault/osmosis-vault" }
collector = { version = "0.1.0", path = "./contracts/collector" }
distributor = { version = "0.1.0", path = "./contracts/distributor" }
staking = { version = "0.1.0", path = "./contracts/staking" }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
overflow-checks = true
opt-level = 3
panic = "abort"
rpath = false
