[package]
name          = "integration-tests"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dev-dependencies]
anyhow                  = { workspace = true }
cosmwasm-std            = { workspace = true }
cw-multi-test           = { workspace = true }
#mars-oracle-osmosis            = { workspace = true }
#mars-oracle-base               = { workspace = true }
#mars-osmosis                   = { workspace = true }
#mars-red-bank                  = { workspace = true }
pablo-vault-types       = { workspace = true }
base-vault              = { workspace = true }
osmosis-vault           = { workspace = true }
simple-vault            = { workspace = true }
apollo-cw-asset         = { workspace = true }
#mars-testing                   = { workspace = true }
#mars-utils                     = { workspace = true }
osmosis-std             = { workspace = true }
osmosis-test-tube       = { workspace = true }
serde                   = { workspace = true }
cosmrs                  = { workspace = true }
cosmwasm-schema         = { workspace = true }

liquidity-helper = "0.1.0"
cw-dex = { version = "0.1.1", features = ["osmosis"] }
cw-dex-router = { version = "0.1.0", features = ["library","osmosis"] }
