[package]
name          = "osmosis-vault"
description   = "Vault targeting osmosis"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
bech32              = { workspace = true }
cosmwasm-schema     = { workspace = true }
cosmwasm-std        = { workspace = true }
cw2                 = { workspace = true }
cw-storage-plus     = { workspace = true }
pablo-vault-types   = { workspace = true }
base-vault          = { workspace = true }
thiserror           = { workspace = true }
cw-vault-standard   = { version = "0.2.0", features = ["lockup", "force-unlock"] }
cw-vault-token      = "0.1.0"

[dev-dependencies]
cosmwasm-schema = { workspace = true }
serde           = { workspace = true }
